--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@vapi-ai/web": "^2.3.8",
+    "@vapi-ai/server-sdk": "^0.10.0",
+    "@vapi-ai/web": "^2.3.0",
     "ai": "^4.3.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
